# cyanos

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md  rust-toolchain.toml
.cargo/: config.toml
arch/aarch64/: Cargo.toml  cyanos-rpi5.ld  cyanos.ld
arch/aarch64/src/: exception.rs  gic.rs  lib.rs  mmu.rs  paging.rs  smp.rs  timer.rs  uart.rs
arch/x86_64/: Cargo.toml  cyanos.ld
arch/x86_64/src/: apic.rs  gdt.rs  idt.rs  lib.rs  paging.rs  pic.rs  smp.rs  syscall.rs  timer.rs
boot/: Cargo.toml
boot/src/: device_tree.rs  lib.rs  limine.rs  multiboot2.rs
capability/: Cargo.toml
capability/src/: lib.rs
drivers/: Cargo.toml
drivers/src/: framebuffer.rs  lib.rs  serial.rs
drivers/usb/: Cargo.toml
drivers/usb/src/: descriptor.rs  device.rs  endpoint.rs  hcd.rs  hub.rs  lib.rs  transfer.rs
drivers/usb/src/xhci/: context.rs  mod.rs  regs.rs  ring.rs
drivers/wifi/: Cargo.toml
drivers/wifi/src/: cfg80211.rs  ieee80211.rs  lib.rs  nl80211.rs  virtio_wifi.rs
drivers/wifi/src/mac80211/: auth.rs  frame.rs  mod.rs  scan.rs  sta.rs
elf/: Cargo.toml
elf/src/: lib.rs
ipc/: Cargo.toml
ipc/src/: channel.rs  lib.rs  message.rs  port.rs
kernel/: Cargo.toml  build.rs
kernel/src/: entry_aarch64.rs  entry_aarch64.s  entry_x86_64.rs  entry_x86_64.s  init.rs  main.rs  mem.rs  syscall.rs  x86_64_start.rs
lib/: Cargo.toml
lib/src/: bitmap.rs  lib.rs  ring_buffer.rs
limine/: limine.conf
linkers/: aarch64-direct.ld  aarch64.ld  x86_64-direct.ld  x86_64.ld
mm/: Cargo.toml
mm/src/: buddy.rs  cow.rs  lib.rs  paging.rs  slab.rs  vmm.rs
sched/: Cargo.toml
sched/src/: clone.rs  context.rs  futex.rs  lib.rs  runqueue.rs  signal.rs  task.rs
scripts/: build-all.sh  build-userland.sh  deploy-rpi5.sh  deploy-x86_64.sh  run-aarch64.sh  run-qemu.sh  run-x86_64.sh
servers/init/: Cargo.toml
servers/init/src/: lib.rs
servers/libc-shim/: Cargo.toml
servers/libc-shim/src/: lib.rs
servers/net/: Cargo.toml
servers/net/src/: lib.rs
servers/proc/: Cargo.toml
servers/proc/src/: lib.rs
servers/tty/: Cargo.toml
servers/tty/src/: lib.rs
servers/vfs/: Cargo.toml
servers/vfs/src/: lib.rs
targets/: aarch64-cyanos-user.json  aarch64-unknown-kernel.json  x86_64-unknown-kernel.json
userland/: Cargo.toml
userland/.cargo/: config.toml
userland/hello/: Cargo.toml
userland/hello/src/: main.rs
userland/init/: Cargo.toml  init
userland/init/src/: main.rs
userland/libc/: Cargo.toml
userland/libc/src/: errno.rs  io.rs  lib.rs  mem.rs  process.rs  start.rs  stdio.rs  string.rs  syscall.rs  time.rs
userland/shell/: Cargo.toml
userland/shell/src/: main.rs
