[workspace]
resolver = "2"
members = [
    "kernel",
    "mm",
    "sched",
    "ipc",
    "drivers",
    "boot",
    "lib",
    "arch/x86_64",
    "arch/aarch64",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
authors = []

[workspace.dependencies]
bitflags = "2"
spin = "0.9"
