[package]
name = "kernel"
version.workspace = true
edition.workspace = true

[features]
# Target Raspberry Pi 5 (BCM2712 + RP1).
# Propagates to arch-aarch64 which selects correct MMIO addresses.
rpi5 = ["arch-aarch64/rpi5"]

[dependencies]
mm      = { path = "../mm" }
sched   = { path = "../sched" }
ipc     = { path = "../ipc" }
boot    = { path = "../boot" }
drivers = { path = "../drivers" }
usb     = { path = "../drivers/usb" }
wifi    = { path = "../drivers/wifi" }
cyanos-lib = { path = "../lib" }
bitflags.workspace = true
spin.workspace = true

[target.'cfg(target_arch = "x86_64")'.dependencies]
arch-x86_64 = { path = "../arch/x86_64" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
arch-aarch64 = { path = "../arch/aarch64" }
