[package]
name = "init-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "init_server"

[dependencies]
sched      = { path = "../../sched" }
ipc        = { path = "../../ipc" }
mm         = { path = "../../mm" }
vfs-server = { path = "../vfs" }
net-server = { path = "../net" }
spin       = { workspace = true }
